--- a/index.html
+++ b/index.html
@@ -159,17 +159,51 @@
                 <a href="./images/g1.jpg" data-lightbox="image-1" data-title="My caption"><img src="./images/g1.jpg" alt=""> </a>
                 <div class="ourgallery-overlay">
                     <h2>our <span>gallery</span></h2>
-                <p>delectus reiciendis maiores alias consequatur </p>
+                    <hr noshade>
+                    <p>delectus reiciendis maiores alias consequatur </p>
                 </div>
                 
             </div>
-            <div class="ourgallery-grid-item"><a href="./images/g2.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g2.jpg" alt=""></a></div>
-            <div class="ourgallery-grid-item"><a href="./images/g3.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g3.jpg" alt=""></a></div>
-            <div class="ourgallery-grid-item"><a href="./images/g4.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g4.jpg" alt=""></a></div>
-            <div class="ourgallery-grid-item"><a href="./images/g5.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g5.jpg" alt=""></a></div>
-            <div class="ourgallery-grid-item ourimg6"><a href="./images/g6.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g6.jpg" alt=""></a></div>
-            <div class="ourgallery-grid-item"><a href=""><img src="" alt=""></a></div>
-            <div class="ourgallery-grid-item"><a href=""><img src="" alt=""></a></div> 
+            <div class="ourgallery-grid-item">
+                <a href="./images/g2.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g2.jpg" alt=""></a>
+                <div class="ourgallery-overlay">
+                    <h2>our <span>gallery</span></h2>
+                    <hr noshade>
+                    <p>delectus reiciendis maiores alias consequatur </p>
+                </div>
+            </div>
+            <div class="ourgallery-grid-item">
+                <a href="./images/g3.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g3.jpg" alt=""></a>
+                <div class="ourgallery-overlay">
+                    <h2>our <span>gallery</span></h2>
+                    <hr noshade>
+                    <p>delectus reiciendis maiores alias consequatur </p>
+                </div>
+            </div>
+            <div class="ourgallery-grid-item">
+                <a href="./images/g4.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g4.jpg" alt=""></a>
+                <div class="ourgallery-overlay">
+                    <h2>our <span>gallery</span></h2>
+                    <hr noshade>
+                    <p>delectus reiciendis maiores alias consequatur </p>
+                </div>
+            </div>
+            <div class="ourgallery-grid-item">
+                <a href="./images/g5.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g5.jpg" alt=""></a>
+                <div class="ourgallery-overlay">
+                    <h2>our <span>gallery</span></h2>
+                    <hr noshade>
+                    <p>delectus reiciendis maiores alias consequatur </p>
+                </div>
+            </div>
+            <div class="ourgallery-grid-item ourimg6">
+                <a href="./images/g6.jpg"  data-lightbox="image-1" data-title="My caption"><img src="./images/g6.jpg" alt=""></a>
+                <div class="ourgallery-overlay">
+                    <h2>our <span>gallery</span></h2>
+                    <hr noshade>
+                    <p>delectus reiciendis maiores alias consequatur </p>
+                </div>
+            </div>
         </div>
     </section>
     <!-- SECTION-TEAM -->
